Add source test back

--- a/tests/extensions/default/Microsoft.DotNet.UpgradeAssistant.Steps.Source.Tests/Microsoft.DotNet.UpgradeAssistant.Steps.Source.Tests.csproj
+++ b/tests/extensions/default/Microsoft.DotNet.UpgradeAssistant.Steps.Source.Tests/Microsoft.DotNet.UpgradeAssistant.Steps.Source.Tests.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\steps\Microsoft.DotNet.UpgradeAssistant.Steps.Source\Microsoft.DotNet.UpgradeAssistant.Steps.Source.csproj" />
-    <ProjectReference Include="..\..\Microsoft.DotNet.UpgradeAssistant.TestHelpers\Microsoft.DotNet.UpgradeAssistant.TestHelpers.csproj" />
+    <ProjectReference Include="..\..\..\..\src\extensions\default\Microsoft.DotNet.UpgradeAssistant.Steps.Source\Microsoft.DotNet.UpgradeAssistant.Steps.Source.csproj" />
+    <ProjectReference Include="..\..\..\Microsoft.DotNet.UpgradeAssistant.TestHelpers\Microsoft.DotNet.UpgradeAssistant.TestHelpers.csproj" />
   </ItemGroup>
 
 </Project>
