--- a/tests/common/Microsoft.DotNet.UpgradeAssistant.Abstractions.Tests/Microsoft.DotNet.UpgradeAssistant.Abstractions.Tests.csproj
+++ b/tests/common/Microsoft.DotNet.UpgradeAssistant.Abstractions.Tests/Microsoft.DotNet.UpgradeAssistant.Abstractions.Tests.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\extensions\default\analyzers\Microsoft.DotNet.UpgradeAssistant.Extensions.Default.CodeFixes\Microsoft.DotNet.UpgradeAssistant.Extensions.Default.CodeFixes.csproj" />
+    <ProjectReference Include="..\..\..\src\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
     <ProjectReference Include="..\..\Microsoft.DotNet.UpgradeAssistant.TestHelpers\Microsoft.DotNet.UpgradeAssistant.TestHelpers.csproj" />
   </ItemGroup>
 </Project>
