Add dependency analyzer for System.Windows.Forms.DataVisualization

--- a/src/extensions/windows/Microsoft.DotNet.UpgradeAssistant.Extensions.Windows/ExtensionManifest.json
+++ b/src/extensions/windows/Microsoft.DotNet.UpgradeAssistant.Extensions.Windows/ExtensionManifest.json
@@ -1,6 +1,10 @@
 ﻿{
   "ExtensionName": "windows",
 
+  "PackageUpdater": {
+    "PackageMapPath": "PackageMaps"
+  },
+
   "ExtensionServiceProviders": [
     "Microsoft.DotNet.UpgradeAssistant.Extensions.Windows.dll"
   ]
