--- a/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/Properties/launchSettings.json
+++ b/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/Properties/launchSettings.json
@@ -2,6 +2,7 @@
   "profiles": {
     "Microsoft.DotNet.UpgradeAssistant.Cli": {
       "commandName": "Project",
+      "commandLineArgs": "analyze C:\\Repos\\WindowsFormsApp1\\App_DeprecatedControls.csproj",
       "environmentVariables": {
         "DOTNET_ENVIRONMENT": "Development"
       }
