--- a/src/extensions/windows/Microsoft.DotNet.UpgradeAssistant.Extensions.Windows/Microsoft.DotNet.UpgradeAssistant.Extensions.Windows.csproj
+++ b/src/extensions/windows/Microsoft.DotNet.UpgradeAssistant.Extensions.Windows/Microsoft.DotNet.UpgradeAssistant.Extensions.Windows.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="PackageMaps\WinFormsPackageMap.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="5.0.0" />
   </ItemGroup>
 
