Adds MAUI extension steps : head projects, templates, project property transforms, source code updates (#790)
* Adds MAUI extension steps : head projects, templates, project property transforms, source code updates

--- a/src/extensions/maui/Microsoft.DotNet.UpgradeAssistant.Extensions.Maui/ExtensionManifest.json
+++ b/src/extensions/maui/Microsoft.DotNet.UpgradeAssistant.Extensions.Maui/ExtensionManifest.json
@@ -11,6 +11,13 @@
     "PackageMapPath": "PackageMaps"
   },
 
+  "TemplateInserter": {
+    "TemplateConfigFiles": [
+      "Templates\\MauiAndroid\\MauiAndroidTemplates.json",
+      "Templates\\MauiHead\\MauiHeadTemplates.json"
+    ]
+  },
+
   "ExtensionServiceProviders": [
     "Microsoft.DotNet.UpgradeAssistant.Extensions.Maui.dll"
   ]
