--- a/src/extensions/default/Microsoft.DotNet.UpgradeAssistant.Steps.ProjectFormat/Microsoft.DotNet.UpgradeAssistant.Steps.ProjectFormat.csproj
+++ b/src/extensions/default/Microsoft.DotNet.UpgradeAssistant.Steps.ProjectFormat/Microsoft.DotNet.UpgradeAssistant.Steps.ProjectFormat.csproj
@@ -4,6 +4,7 @@
     <InstallTryConvert>true</InstallTryConvert>
   </PropertyGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\common\Microsoft.DotNet.UpgradeAssistant.Abstractions.Internal\Microsoft.DotNet.UpgradeAssistant.Abstractions.Internal.csproj" />
     <ProjectReference Include="..\..\..\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
   </ItemGroup>
 </Project>
