Host try-convert in process instead of calling exe
This change incorporates try-convert assemblies into the build process
and the default ITryConvertTool implementation. A feature flag
TRY_CONVERT_EXE is used to switch back to using the exe. This will be
removed in a future release (along with the packaged try-convert) if it
is working well.

--- a/src/extensions/default/Microsoft.DotNet.UpgradeAssistant.Steps.ProjectFormat/Microsoft.DotNet.UpgradeAssistant.Steps.ProjectFormat.csproj
+++ b/src/extensions/default/Microsoft.DotNet.UpgradeAssistant.Steps.ProjectFormat/Microsoft.DotNet.UpgradeAssistant.Steps.ProjectFormat.csproj
@@ -1,9 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <InstallTryConvert>true</InstallTryConvert>
   </PropertyGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\modules\try-convert\src\MSBuild.Abstractions\MSBuild.Abstractions.csproj" />
+    <ProjectReference Include="..\..\..\..\modules\try-convert\src\MSBuild.Conversion.Facts\MSBuild.Conversion.Facts.csproj" />
+    <ProjectReference Include="..\..\..\..\modules\try-convert\src\MSBuild.Conversion.Package\MSBuild.Conversion.Package.csproj" />
+    <ProjectReference Include="..\..\..\..\modules\try-convert\src\MSBuild.Conversion.Project\MSBuild.Conversion.Project.csproj" />
+    <ProjectReference Include="..\..\..\..\modules\try-convert\src\MSBuild.Conversion.SDK\MSBuild.Conversion.SDK.csproj" />
     <ProjectReference Include="..\..\..\common\Microsoft.DotNet.UpgradeAssistant.Abstractions.Internal\Microsoft.DotNet.UpgradeAssistant.Abstractions.Internal.csproj" />
     <ProjectReference Include="..\..\..\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
   </ItemGroup>
