--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -76,6 +76,7 @@ stages:
         steps:
         - checkout: self
           clean: true
+          submodules: true
         - task: UseDotNet@2
           displayName: 'Use .NET Core sdk'
           inputs:
