Refactor extension provider to not require NuGet backed implementation

--- a/Extensions.targets
+++ b/Extensions.targets
@@ -83,6 +83,7 @@
     <!-- Create a list of all assemblies included by host and framework -->
     <ItemGroup>
       <_ExcludeFromExtension Include="Microsoft.DotNet.UpgradeAssistant.Abstractions.dll" />
+      <_ExcludeFromExtension Include="Microsoft.DotNet.UpgradeAssistant.Abstractions.Internal.dll" />
       <_ExcludeFromExtension Include="System.ComponentModel.Annotations.dll" />
       <_ExcludeFromExtension Include="System.Memory.dll" />
       <_ExcludeFromExtension Include="System.Numerics.Vectors.dll" />
