Move NuGet assembly usage to own assembly load context
This allows us to ensure we're using the right version of NuGet that we compiled against as there are potentially breaking changes in the libraries if we load them from MSBuild.

--- a/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/appsettings.json
+++ b/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/appsettings.json
@@ -15,6 +15,10 @@
   "Extensions": {
     "Source": "https://upgradeassistant.blob.core.windows.net/extensions/index.json",
 
+    "required": [
+      "nuget"
+    ],
+
     "Default": [
       "default",
       "vb",
