--- a/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/Microsoft.DotNet.UpgradeAssistant.Cli.csproj
+++ b/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/Microsoft.DotNet.UpgradeAssistant.Cli.csproj
@@ -33,13 +33,14 @@
       <Version>2.10.0</Version>
     </PackageReference>
     <PackageReference Include="Serilog.Extensions.Hosting">
-      <Version>3.1.0</Version>
+      <Version>4.1.2</Version>
     </PackageReference>
+    <PackageReference Include="Serilog.Formatting.Compact" Version="1.1.0" />
     <PackageReference Include="Serilog.Sinks.Console">
-      <Version>3.1.1</Version>
+      <Version>4.0.0</Version>
     </PackageReference>
     <PackageReference Include="Serilog.Sinks.File">
-      <Version>4.1.0</Version>
+      <Version>5.0.0</Version>
     </PackageReference>
     <PackageReference Include="System.CommandLine">
       <Version>2.0.0-beta1.21216.1</Version>
