--- a/docs/design/hybrid_example/hybrid_example.csproj
+++ b/docs/design/hybrid_example/hybrid_example.csproj
@@ -6,12 +6,23 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="AspNetHttpContext.cs" />
+    <Compile Remove="SystemWebHttpContext.cs" />
+  </ItemGroup>
+
+  <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
+    <Compile Remove="HttpContextFactory.cs" />
+  </ItemGroup>
+
   <ItemGroup Condition=" '$(TargetFramework)' == 'net6.0' ">
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
+    <Compile Include="AspNetHttpContext.cs" />
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
     <Reference Include="System.Web" />
+    <Compile Include="SystemWebHttpContext.cs" />
   </ItemGroup>
 
 </Project>
