--- a/src/extensions/looseassembly/Indexing/Indexing.csproj
+++ b/src/extensions/looseassembly/Indexing/Indexing.csproj
@@ -2,15 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-	  <LangVersion>9.0</LangVersion>
-	  <Nullable>enable</Nullable>
 	  <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-	  <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-	  <Authors>Mark Miller</Authors>
-	  <Company>Microsoft</Company>
-	  <Product>Chem</Product>
-	  <Copyright>2021 Microsoft</Copyright>
-	  <Version>1.0.0-beta6</Version>
+	  <AssemblyName>Microsoft.DotNet.UpgradeAssistant.Extensions.LooseAssembly.Indexing</AssemblyName>
+	  <RootNamespace>Microsoft.DotNet.UpgradeAssistant.Extensions.LooseAssembly.Indexing</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
