--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -100,7 +100,10 @@ stages:
             -prepareMachine
             $(_BuildArgs)
           displayName: Windows Build / Publish
-        - script: .\build_extensions.ps1 -Configuration $(_BuildConfig)
+        - task: PowerShell@2
+          inputs:
+            filePath: .\build_extensions.ps1
+            arguments: -Configuration $(_BuildConfig)
           displayName: Package extensions
 
 - ${{ if and(ne(variables['System.TeamProject'], 'public'), notin(variables['Build.Reason'], 'PullRequest')) }}:
