--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -12,6 +12,8 @@ variables:
   - ${{ if and(ne(variables['System.TeamProject'], 'public'), notin(variables['Build.Reason'], 'PullRequest')) }}:
     - group: AzureDevOps-Artifact-Feeds-Pats
     - group: UpgradeAssistant_SDL_Settings
+  - name: DownloadLooseAssemblyIndex
+    value: true
 
 trigger:
   batch: true
@@ -98,6 +100,11 @@ stages:
             -prepareMachine
             $(_BuildArgs)
           displayName: Windows Build / Publish
+        - task: PowerShell@2
+          inputs:
+            filePath: .\build_extensions.ps1
+            arguments: -Configuration $(_BuildConfig)
+          displayName: Package extensions
 
 - ${{ if and(ne(variables['System.TeamProject'], 'public'), notin(variables['Build.Reason'], 'PullRequest')) }}:
   - template: eng\common\templates\post-build\post-build.yml
