Pack non-default extensions in pack target
This change enables normal `/t:pack` to be used to generate the
extension nupkg packages when `PackExtension=true` is included in the
csproj.

--- a/Extensions.targets
+++ b/Extensions.targets
@@ -120,4 +120,6 @@
     <Message Text="Published extension %(Extension.Name)" Importance="high" Condition=" '%(Extension.Name)' != '' "/>
   </Target>
 
+  <Import Project="$(MSBuildThisFileDirectory)src\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\build\Microsoft.DotNet.UpgradeAssistant.Abstractions.targets" />
+
 </Project>
