Change default endpoint for extensions

--- a/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/appsettings.json
+++ b/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/appsettings.json
@@ -13,7 +13,7 @@
   },
 
   "Extensions": {
-    "Source": "https://upgradeassistant.blob.core.windows.net/extensions/index.json",
+    "Source": "https://api.nuget.org/v3/index.json",
 
     "required": [
       "nuget"
